tdf#85195 only check export formats for default format

What good would would a pre-selected export filter format to me if I
cannot save into it?

Change-Id: I9e5d06cec5ffa0ba325b8bfcfadc4fd55d39017a